# cross-species-mapper

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yaml  package-lock.json  package.json  prettierrc.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_request.md
.github/workflows/: api_tests.yaml  azure-function.yaml  azure-static-web-apps-kind-mud-0e824de0f.yml  azure_deployment.yml  frontend_tests.yaml
api/: .env.example  Dockerfile  pyproject.toml  requirements.txt  test.ipynb
api/WrapperFunction/: __init__.py  azure_wrapper.py  function.json
api/data/: human_left_inflated_10k_fs_lr.surf.gii  human_right_gradient_10k_fs_lr.h5  human_right_inflated_10k_fs_lr.surf.gii  macaque_right_inflated_10k_fs_lr.surf.gii
api/data/features/: README.md
api/data/surfaces/: README.md  human_left_midthickness_10k_fs_lr.surf.gii  human_right_midthickness_10k_fs_lr.surf.gii  macaque_left_inflated_10k_fs_lr.surf.gii  macaque_left_midthickness_10k_fs_lr.surf.gii  macaque_right_midthickness_10k_fs_lr.surf.gii
api/src/: builder.py  main.py  settings.py  utils.py
api/src/core/: data.py  data_fetcher.py  settings.py  types.py  utils.py
api/src/routers/features/: controller.py  schemas.py  utils.py  views.py
api/src/routers/graphs/: controller.py  views.py
api/src/routers/surface/: controller.py
api/src/routers/surfaces/: controller.py  schemas.py  utils.py  views.py
api/tests/endpoint/: test_features.py  test_surface.py
api/tests/unit/: test_features.py  test_surfaces.py  test_utils.py
data/: human_left_gradient_10k_fs_lr.h5  human_left_inflated_10k_fs_lr.h5  human_right_inflated_10k_fs_lr.h5  macaque_left_gradient_10k_fs_lr.h5  macaque_left_inflated_10k_fs_lr.h5  macaque_right_gradient_10k_fs_lr.h5  macaque_right_inflated_10k_fs_lr.h5
frontend/: .babelrc  .eslintrc.yaml  .eslintrc.yml  .npmrc  Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.tsx  app.html  index.css
frontend/src/api/: fetcher.test.ts  fetcher.ts
frontend/src/components/: Button.svelte  Footer.test.tsx  Footer.tsx  Header.test.tsx  Header.tsx  Introduction.tsx  Slider.test.tsx  Slider.tsx  SurfacePlotter.test.tsx  SurfacePlotter.tsx
frontend/src/constants/: api.ts  environment.ts
frontend/src/lib/: api.ts  store.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte  Header.svelte  Introduction.svelte  styles.css
frontend/src/routes/viewer/: client.ts  (+3 more)
frontend/src/types/: api.ts  surfaces.ts
frontend_svelte/: package-lock.json  package.json
frontend_svelte/src/routes/: +page.svelte  Introduction.svelte
frontend_svelte/src/types/: api.ts
scripts/: eslint.sh
(+39 files in other folders)
