[tool.poetry]
name = "cross-species-mapper-api"
version = "0.1.0"
description = ""
authors = ["Reinder Vos de Wael <reinder.vosdewael@childmind.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"
nibabel = "^5.1.0"
numpy = "^1.24.3"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^5.12.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = ["api"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.mypy]
ignore_missing_imports = true