[tool.poetry]
name = "cross-species-mapper-api"
version = "0.1.0"
description = ""
authors = ["Reinder Vos de Wael <reinder.vosdewael@childmind.org>"]
readme = "README.md"
license = "L-GPL-2.1"

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"
nibabel = "^5.1.0"
numpy = "^1.24.3"
scipy = "^1.10.1"
azure-functions = "^1.15.0"
scikit-learn = "^1.3.0"
nest-asyncio = "^1.5.7"
azure-storage-blob = "^12.17.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^5.12.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = ["api"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
